Updated the backup script for typhlosion, and started working on the minecraft upload script.